# ABTWREN

./: .gitignore  CMakeLists.txt  CMakePresets.json  TXMC635_DIRECT_MMAP_GUIDE.md  fesa-rt-integration.md  wren-reference.md  wren-sidecar.md
cmake/: toolchain-arm64.cmake  toolchain-x86_64.cmake
diagnostic_scripts/: build.sh  cp_to_shm.sh  gem_counter.sh  profile_hotpath.sh  run_tap_test.sh  test_rebind.sh
docs/: fesa-rt-integration.md  wren-reference.md  wren-sidecar.md
src/: DeviceInstance.toml  EventProcessor.cpp  EventProcessor.hpp  MainReceiver.cpp  MainReceiver.hpp  QueueSink.cpp  QueueSink.hpp  ShmSink.cpp  ShmSink.hpp  TimingEvent.hpp  WRENCTIMConfigurator.cpp  WRENCTIMConfigurator.hpp  WRENProtocol.hpp  WRENReceiver.cpp  WRENReceiver.hpp  WRENTransmitter.cpp  WRENTransmitter.hpp  WRENTransmitterRegisters.hpp  main.cpp
src/HAL/: ConfigParser.hpp  ReceiverBackend.cpp  ReceiverBackend.hpp  TransmitterBackend.cpp  TransmitterBackend.hpp  TransportBackend.hpp
src/WREN/: WRENCTIMConfigurator.cpp  WRENCTIMConfigurator.hpp  WRENProtocol.hpp  WRENReceiver.hpp  WRENTransmitter.cpp  WRENTransmitter.hpp
src/common/: EventProcessor.cpp  EventProcessor.hpp  MainReceiver.hpp  ShmSink.cpp  ShmSink.hpp  TimingEvent.hpp  ZynqUltraScaleSink.hpp
